2005-01-17  Aaron Luchko  <aluchko@redhat.com>

	* src/org/eclipse/cdt/rpm/ui/RPMExportPage.java (): bz# 83031
	* src/org/eclipse/cdt/rpm/ui/SRPMImportOperation.java (): ditto
	* src/org/eclipse/cdt/rpm/ui/SRPMImportPage.java (): ditto
	* src/org/eclipse/cdt/rpm/ui/SRPMImportWizard.java (): ditto
	* src/org/eclipse/cdt/rpm/ui/rpm_strings.properties: ditto

2005-01-15  Aaron Luchko  <aluchko@redhat.com>

	* src/org/eclipse/cdt/rpm/ui/SRPMImportPage.java:
	  Add previously opened srpms to the combo box when opening srpms
	
2004-12-15  Rick Moseley  <rmoseley@redhat.com>

	* src/org/eclipse/cdt/rpm/ui/RPMExportPage.java (returnProjectPath): 
	  bz #81145 - fixed unhandled exception when exporting a source/binary RPM

2004-12-09  Rick Moseley  <rmoseley@redhat.com>

	* src/org/eclipse/cdt/rpm/ui/rpm_strings.properties: bz# 78773/78788
	* src/org/eclipse/cdt/rpm/ui/RPMExportPage_2.java (modifyText): bz#
	   78773/78788

2004-11-11  Rick Moseley  <rmoseley@redhat.com>

	* src/org/eclipse/cdt/rpm/ui/SRPMImportPage.java (createProjectBox): add
	  addSelectionListener for when a project to import into is not selected

2004-11-11  Rick Moseley  <rmoseley@redhat.com>
	* plugin.xml: remove "test" from labels

2004-11-11  Rick Moseley  <rmoseley@redhat.com>
	* plugin.xml: change version to 1.2

2004-11-05  Aaron Luchko  <aluchko@redhat.com>

	* src/org/eclipse/cdt/rpm/ui/RPMExportPage.java (): show only C/C++ projects to 
	   be exported
	* src/org/eclipse/cdt/rpm/ui/RPMExportWizard.java (): ditto
	* src/org/eclipse/cdt/rpm/ui/RPMImportPage.java (): ditto
	* src/org/eclipse/cdt/rpm/ui/SRPMImportPage.java (): ditto

2004-11-04  Jeffery Pound  <jpound@redhat.com>

	* src/org/eclipse/cdt/rpm/ui/SRPMImportOperation.java (): put commands into
	   a properties bundle`
	* src/org/eclipse/cdt/rpm/ui/preferences/RPMPluginPreferencesPage.java (): add
	   shell commands to be user configurable

2004-08-31  Rick Moseley  <rmoseley@redhat.com>

	* build.xml: rebuilt after merge/refactoring
