@@ -50,6 +50,7 @@ RPMExportPage.Export_Source=Export a Source RPM
 
 RPMexportwiz.Export_an_RPM_title=Export an RPM
 
+SRPMImportPage.Configured_New_Project=Check out as a project &configured using the New Project Wizard
 SRPMImportPage.Project_does_not_exist=Project does not exist. Please select a project
 SRPMImportPage.Problems_identifying_import_source_directory=Problems identifying import source directory
 SRPMImportPage.SRPM_Name=SRPM Name
@@ -68,6 +69,7 @@ SRPMImportPage.preserveRPMenvironment=Preserve RPM environment
 SRPMImportPage.Source_not_Valid=Source File is not a valid file
 SRPMImportPage.No_src_rpm_ext=Filename does not have src.rpm extension
 SRPMImportPage.Build_Options=Build Options
+SRPMImportPage.import_srpm_into=Import SRPM into...
 SRPMImportwizard.Import_an_SRPM=Import an SRPM
 
 
