@@ -1,3 +1,10 @@
+2005-01-18  aluchko  <aluchko@tomaluk.toronto.redhat.com>
+
+	* src/org/eclipse/cdt/rpm/ui/SRPMImportPage.java (): bz# 83135
+	  Can import into a new project using New Project Wizard
+	* src/org/eclipse/cdt/rpm/ui/rpm_strings.properties: bz# 83135
+	  Can import into a new project using New Project Wizard
+
 2005-01-17  Aaron Luchko  <aluchko@redhat.com>
 
 	* src/org/eclipse/cdt/rpm/ui/RPMExportPage.java (): bz# 83031
